# aind-ibl-capsule-converter

./: .gitignore  README.md  VALIDATION.md  pyproject.toml
.codeocean/: app-panel.json  datasets.json  environment.json  resources.json
code/: Alf Export.ipynb  Convert to Alf.ipynb  Data Extractor.ipynb  Extract Continuous.ipynb  OME Zarr.ipynb  OPTIMIZATION_ANTS.md  OPTIMIZATION_IO.md  OPTIMIZATION_PARALLELIZATION.md  PROFILING.md  README_PROFILING.md  Testing.ipynb  TestingCode.ipynb  Untitled.ipynb  analyze_performance.py  debug_entry.py  extract_continuous.py  extract_ephys_and_hist_async.py  extract_ephys_and_histology.py  extract_ephys_hist_core.py  extract_files.py  extract_spikes.py  fourier.py  ibl_preprocess_types.py  io_monitor.sh  main.py  performance_profiler.py  pipeline_types.py  run  run.sh  run_profiled.py  setup_monitoring.sh  template_model.py  utils.py  validate_inputs.py
code/OLD/: Alf Export.ipynb  CSVTesting.ipynb  CodeGraveyard_deletelater.py  Extract Continuous.ipynb  extract_continuous.py  extract_spikes.py  utils.py
code/aind-mri-utils/src/aind_mri_utils/file_io/: neuroglancer.py
environment/: Dockerfile  postInstall
metadata/: metadata.yml
