[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-ibl-capsule-converter"
version = "0.1.0"
description = "CodeOcean capsule for converting AIND electrophysiology data to IBL ALF format with histology alignment"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Allen Institute for Neural Dynamics" },
    { name = "Yoni Browning", email = "yoni.browning@alleninstitute.org" },
    {name = "Ben Hardcastle"},
    {name = "Arjun Sridhar"}
]
keywords = ["neuroscience", "electrophysiology", "IBL", "data-conversion", "AIND"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "zarr>=2.10.0",
    "antspyx>=0.3.0",
    "iblatlas>=0.4.0",
    "aind-mri-utils>=0.1.0",
    "aind-ephys-ibl-gui-conversion @ git+https://github.com/AllenNeuralDynamics/aind-ephys-ibl-gui-conversion@main"
]

[dependency-groups]
dev = [
    'codespell', 'pytest', 'pytest-cov', 'ruff', 'interrogate'
]
jupyter = [{include-group = 'dev'}, 'ipykernel', 'pip']

[project.scripts]
aind-ibl-convert = "aind_ibl_capsule_converter.extract_ephys_and_histology:main"

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-ibl-capsule-converter"
Issues = "https://github.com/AllenNeuralDynamics/aind-ibl-capsule-converter/issues"

[tool.setuptools.packages.find]
where = ["code"]


[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=aind_ibl_capsule_converter --cov-report=term-missing"
